# WLive

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wanglei/wlive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioLive.cpp  AudioLive.h  CppCallJavaUtils.cpp  CppCallJavaUtils.h  SafeQueue.h  VideoLive.cpp  VideoLive.h  WYuvUtils.cpp  WYuvUtils.h  macro.h  native-lib.cpp
app/src/main/cpp/librtmp/: CMakeLists.txt  rtmp.c
app/src/main/java/com/wanglei/wlive/: AspectRatioFragment.java  AudioLive.java  LivePusher.java  MainActivity.java  VideoLive.java
app/src/main/java/com/wanglei/wlive/utils/: AspectRatio.java  CameraUtils.java  SensorControler.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wanglei/wlive/: ExampleUnitTest.java
cameralibrary/: build.gradle
cameralibrary/src/androidTest/java/com/wanglei/cameralibrary/: ExampleInstrumentedTest.java
cameralibrary/src/main/: AndroidManifest.xml
cameralibrary/src/main/java/com/wanglei/cameralibrary/: CameraView.java  DisplayOrientationDetector.java
cameralibrary/src/main/java/com/wanglei/cameralibrary/base/: AspectRatio.java  CameraViewImpl.java  Constants.java  PreviewImpl.java  Size.java  SizeMap.java
cameralibrary/src/main/java/com/wanglei/cameralibrary/camera/: Camera1.java  Camera2.java  Camera2Api23.java  SurfaceViewPreview.java  (+1 more)
cameralibrary/src/test/java/com/wanglei/cameralibrary/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
